# glbak

./: .env.example  README.md  pyproject.toml  pyrightconfig.json
src/gitlab_backup/: __init__.py  cli.py  clone.py  gitlab_api.py  logging_utils.py  settings.py
src/gitlab_backup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/glbak/: __init__.py  cli.py  clone.py  gitlab_api.py
